--- a/templates/pagina_base.html
+++ b/templates/pagina_base.html
@@ -26,7 +26,7 @@
                         <a href="/anteriores/">Anteriores</a>
                     </li>
                     <li>
-                        <a href="/arquivos/">Fotos & etc.</a>
+                        <a href="/fotos/">Fotos</a>
                     </li>
                     <li>
                         <a href="/contato/">Contato</a>
