--- a/site_media/estilo/techtalks/detalhes_palestra.css
+++ b/site_media/estilo/techtalks/detalhes_palestra.css
@@ -5,12 +5,12 @@
 
 #dados_palestras {
     padding: 10px;
-    color: #00923f;
+    color: #868686;
 }
 
 #dados_palestras a {
     text-decoration: none;
-    color: #00923f;
+    color: #868686;
 }
 
 #dados_palestras a:hover {
@@ -18,7 +18,7 @@
 }
 
 .negrito {
-    font-weight: bold;
+    color: #555555;
 }
 
 .titulo_destaque {
@@ -29,8 +29,8 @@
     top: 5px;
     padding-top: 8px !important;
     padding: 5px;
-    color: #ffffff;
-    background-color: #00923f;
+    color: #69B92D;
+    background-color: #DDDDDD;
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
@@ -38,8 +38,45 @@
 
 .destaque {
     margin-bottom: 10px;
-    border: 1px solid #00923f;
-    -moz-border-radius:4px;
-	-khtml-border-radius:4px;
-	-webkit-border-radius:4px;
+    border: 1px solid #DDDDDD;
+}
+
+.video_e_slide_container {
+    margin-bottom: 10px;
+    padding-right: 3px;
+    padding-top: 10px;
+	padding-left: 10px;
+}
+
+.video_e_slide {
+    margin:0 auto;
+}
+
+.video {
+    /*padding-left: 5px;*/
+    padding-right: 3px;
+    padding-bottom: 3px !important;
+    padding-top: 2px !important;
+    color:#868686;
+    float: left;
+    width: 360px;
+}
+
+.slide_div {
+    width: 360px;
+    margin-left: 365px;
+    margin-top: 2px;
+}
+
+.slide_url {
+    padding-left: 5px;
+}
+
+.slide_url a {
+    color:#868686;
+}
+
+.sem_arquivo {
+    color: #868686;
+    font-size: 20px;
 }
