--- a/site_media/estilo/techtalks/detalhes_palestrante.css
+++ b/site_media/estilo/techtalks/detalhes_palestrante.css
@@ -2,7 +2,7 @@
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    border: 1px solid #00923f;
+    border: 1px solid #DDDDDD;
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
@@ -16,18 +16,13 @@
 }
 
 #infos_palestrante .info {
-    margin-bottom: 3px;
     padding: 5px;
-    -moz-border-radius:4px;
-	-khtml-border-radius:4px;
-	-webkit-border-radius:4px;
-	border-radius:4px;
-    color: #00923f;
+    color: #868686;
 }
 
 #infos_palestrante .info a {
 	text-decoration: none;
-	color: #00923f;
+	color: #868686;
 }
 
 #infos_palestrante .info a:hover {
@@ -63,8 +58,8 @@
     position: relative;
     top: 5px;
     padding: 5px;
-    color: #ffffff;
-    background-color: #00923f;
+    color: #69B92D;
+    background-color: #DDDDDD;
     -moz-border-radius:4px;
 	-khtml-border-radius:4px;
 	-webkit-border-radius:4px;
