Pequena alteração estética

--- a/site_media/estilo/techtalks/equipe.css
+++ b/site_media/estilo/techtalks/equipe.css
@@ -4,7 +4,7 @@
     background-color: #DDDDDD;
 	border-top: 1px solid #CCCCCC;
 	border-bottom: 1px solid #CCCCCC;
-	color: #69B92D;
+	color: #000000;
 	font-weight: bold;
     text-align: center;
     font-weight: bold;
